syntax = "proto3";
package logic;
option go_package = "gim/pkg/protocol/pb/logicpb";

import "google/protobuf/empty.proto";

service GroupExtService {
  // 发送群组消息
  rpc SendMessage (SendGroupMessageRequest) returns (SendGroupMessageReply);
  // 创建群组
  rpc Create (GroupCreateRequest) returns (GroupCreateReply);
  // 更新群组
  rpc Update (GroupUpdateRequest) returns (google.protobuf.Empty);
  // 获取群组信息
  rpc Get (GroupGetRequest) returns (GroupGetReply);
  // 获取用户加入的所有群组
  rpc List (google.protobuf.Empty) returns (GroupListReply);

  // 添加群组成员
  rpc AddMembers (AddMembersRequest) returns (AddMembersReply);
  // 更新群组成员信息
  rpc UpdateMember (UpdateMemberRequest) returns (google.protobuf.Empty);
  // 添加群组成员
  rpc DeleteMember (DeleteMemberRequest) returns (google.protobuf.Empty);
  // 获取群组成员
  rpc GetMembers (GetMembersRequest) returns (GetMembersReply);
}

message SendGroupMessageRequest {
  uint64 group_id = 1; // 群组ID
  bytes content = 2; // 推动内容
}
message SendGroupMessageReply {
  uint64 message_id = 1; // 消息序列号
}

message GroupCreateRequest {
  string name = 1; // 名称
  string avatar_url = 2; // 头像
  string introduction = 3; // 简介
  string extra = 4; // 附加字段
  repeated uint64 member_ids = 5; // 群组成员ID列表
}
message GroupCreateReply {
  uint64 group_id = 1; // 群组id
}

message GroupUpdateRequest {
  uint64 group_id = 1; // 群组id
  string avatar_url = 2; // 头像
  string name = 3; // 名称
  string introduction = 4; // 简介
  string extra = 5; // 附加字段
}

message GroupGetRequest {
  uint64 group_id = 1;
}
message GroupGetReply {
  Group group = 1;
}

message Group {
  uint64 group_id = 1; // 群组id
  string name = 2; // 名称
  string avatar_url = 3; // 头像
  string introduction = 4; // 简介
  int32 user_mum = 5; // 用户数
  string extra = 6; // 附加字段
  int64 create_time = 7; // 创建时间
  int64 update_time = 8; // 更新时间
}

message GroupListReply {
  repeated Group groups = 1;
}

message AddMembersRequest {
  uint64 group_id = 1; // 群组id
  repeated uint64 user_ids = 2; // 用户id列表
}
message AddMembersReply {}

enum MemberType {
  GMT_UNKNOWN = 0; // 未知
  GMT_ADMIN = 1; // 管理员
  GMT_MEMBER = 2; // 成员
}

message UpdateMemberRequest {
  uint64 group_id = 1; // 群组id
  uint64 user_id = 2; // 用户id
  MemberType member_type = 3; // 成员类型
  string remarks = 4; // 备注
  string extra = 5; // 附加字段
}

message DeleteMemberRequest {
  uint64 group_id = 1; // 群组id
  uint64 user_id = 2; // 用户id
}

message GetMembersRequest {
  uint64 group_id = 1;
}
message GetMembersReply {
  repeated GroupMember members = 1;
}
message GroupMember {
  uint64 user_id = 1;
  string nickname = 2; // 昵称
  int32 sex = 3; // 性别
  string avatar_url = 4; // 头像地址
  string user_extra = 5; // 用户附加字段
  MemberType member_type = 6; // 成员类型
  string remarks = 7; // 备注
  string extra = 8; // 群组成员附加字段
}